@@ -2892,7 +2892,6 @@ GEN     gmulsg(long s, GEN y);
 GEN     gsqr(GEN x);
 GEN     gsub(GEN x, GEN y);
 GEN     gsubsg(long x, GEN y);
-GEN     inv_ser(GEN b);
 GEN     mulcxI(GEN x);
 GEN     mulcxmI(GEN x);
 GEN     ser_normalize(GEN x);
@@ -3083,6 +3082,7 @@ GEN     hqfeval(GEN q, GEN x);
 GEN     imag_i(GEN x);
 GEN     integ(GEN x, long v);
 GEN     integser(GEN x);
+GEN     inv_ser(GEN b);
 int     iscomplex(GEN x);
 int     isexactzero(GEN g);
 int     isrationalzeroscalar(GEN g);
@@ -3131,6 +3131,7 @@ GEN     scalarser(GEN x, long v, long prec);
 GEN     ser_unscale(GEN P, GEN h);
 long    serprec(GEN x, long v);
 GEN     serreverse(GEN x);
+GEN     sertoser(GEN x, long prec);
 GEN     simplify(GEN x);
 GEN     simplify_shallow(GEN x);
 GEN     tayl(GEN x, long v, long precdl);
